--- a/operator_overloading/Cargo.toml
+++ b/operator_overloading/Cargo.toml
@@ -1,9 +1,9 @@
-workspace = { members = ["http_client", "operator_overloading"] }
 [package]
-name = "Rust-Learning"
+name = "operator_overloading"
 version = "0.1.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+chrono = "0.4.38"
