--- a/derek_banas_rust/Cargo.toml
+++ b/derek_banas_rust/Cargo.toml
@@ -1,9 +1,9 @@
-workspace = { members = [ "async-rust", "derek_banas_rust","http_client", "operator_overloading"] }
 [package]
-name = "Rust-Learning"
+name = "derek_banas_rust"
 version = "0.1.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+rand = "0.8.5"
