--- a/learn_rust_in_month_of_lunches/Cargo.toml
+++ b/learn_rust_in_month_of_lunches/Cargo.toml
@@ -5,5 +5,6 @@ edition = "2021"
 
 [dependencies]
 chrono = "0.4.38"
+rayon = "1.10.0"
 serde = { version = "1.0.208",features = ["derive"] }
 serde_json = "1.0.125"
