--- a/wiki/Cargo.toml
+++ b/wiki/Cargo.toml
@@ -8,3 +8,4 @@ reqwest = { version = "0.12.7",features = ["blocking"]}
 crossterm = "0.26.1"
 serde = {version = "1.0.209",features = ["serde_derive"]}
 serde_json = "1.0.127"
+thiserror = "1.0.63"
